<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_analysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/analysis"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spendingLayout"
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="@color/red"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_analysis">

            <TextView
                android:id="@+id/text_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Spending"
                android:textColor="#D5D5D5"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_expense_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="₹12000"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_amount"
                app:layout_constraintStart_toStartOf="@id/text_amount"
                app:layout_constraintTop_toBottomOf="@id/text_amount" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_spending"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/incomeLayout"
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_border"
            android:backgroundTint="#398C42"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@id/spendingLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/spendingLayout">

            <TextView
                android:id="@+id/text_amount2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Income"
                android:textColor="#D5D5D5"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/image2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_income_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="₹12000"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/text_amount2"
                app:layout_constraintStart_toStartOf="@id/text_amount2"
                app:layout_constraintTop_toBottomOf="@id/text_amount2" />

            <ImageView
                android:id="@+id/image2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_income"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:id="@+id/tv_cat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spendingLayout" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_cat">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="@string/spending_s"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:padding="10dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_margin="5dp"
                android:background="#D1D1D1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="10dp"
                android:text="@string/income"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/income_chart"
                android:layout_width="350dp"
                android:layout_height="350dp"
                android:layout_margin="10dp"
                android:padding="10dp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>